@@ -2,7 +2,7 @@ Import('env')
 
 subst = {'arch': env['ARCH']}
 
-objects = Split('main.c acl_common.c bitmap.c clock.c cmn_err.c condvar.c flock.c fs_subr.c kcf_random.c kobj.c kobj_subr.c move.c mutex.c pathname.c policy.c refstr.c rwlock.c taskq.c thread.c vfs.c vnode.c %(arch)s/atomic.S' % subst)
+objects = Split('main.c acl_common.c bitmap.c clock.c cmn_err.c condvar.c flock.c fs_subr.c kcf_random.c kmem.c kobj.c kobj_subr.c move.c mutex.c pathname.c policy.c refstr.c rwlock.c taskq.c thread.c vfs.c vnode.c %(arch)s/atomic.S' % subst)
 cpppath = Split('. ./include ./include/%(arch)s #lib/libumem/include' % subst)
 ccflags = Split('-D_KERNEL')
 
